added correct fix for img sizing in lightbox

--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
         <div class="row">
             <div class="col s12 m12 l12">
                 <div class="pic1-bg custom-cursor">
+                   <div class="container">
                     <div class="row">
                         <div class="col s12 m6">
                             <div class="fixd-info wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
@@ -70,6 +71,7 @@
                                 <p class="white-text fixd-info-p">The latest Banksy is reportedly on 68th Street and 38th Avenue in Queens, just off the 7 Train. The text reads <b>“What we do in life echoes in Eternity,”</b> as a man begins to wipe it off the wall. It’s Banky’s first piece in Queens, and according to Instagrammer azzabi_soraya, Banksy went to the borough in response to a commenter’s request to inspire his kid. As for the quote, it’s from Maximus in Gladiator, which is a variation from the original by Marcus Aurelius, the Roman emperor and philosopher who said “What we do now echoes in eternity.”</p>
                             </div>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
@@ -148,7 +150,7 @@
             </ul>
         </div>
         <div class="row">
-            <div class="col s12 m12 l12 center">
+            <div class="col s12 m12 l12 center" id="poll">
                 <h2 class="center">POLL TIME!</h2> </div>
         </div>
         <div class="container">
@@ -173,7 +175,7 @@
                 </div>
                 <div class="row">
                     <div class="gallery">
-                        <div class="placeholder col s12 m6 l6 left materialboxed" id="featured"> <img src="images/pic20.jpg"> </div>
+                        <div class="placeholder col s12 m6 l6 left materialboxed responsive-img" id="featured"> <img src="images/pic20.jpg"> </div>
                         <div class="gallery-images col s12 m6 l5 right">
                             <div class="image"> <img src="images/pic1.jpg" data-id="1" data-echo="images/pic1.jpg"> </div>
                             <div class="image"> <img src="images/pic17.jpg" data-id="2" data-echo="images/pic17.jpg"> </div>
@@ -190,6 +192,7 @@
                 </div>
             </div>
             </div>
+            <br>
          </div>
                <div class="bg2 custom-cursor">
                 <div class="container">
@@ -226,16 +229,17 @@
             <div class="container">
                 <div class="row" id="moreinfo">
                     <div class="col l6 s12">
-                        <h5 class="white-text">Who is Banksy</h5>
+                        <h5 class="white-text">Who is Banksy?</h5>
                         <p class="grey-text text-lighten-2">We may not know much about Banksy the man, however we know a lot about his art.</p>
+                        <p class="grey-text text-lighten-2 smalltxt">All information is provided from the Creative Commons resources. All credit for pictures are allowed under fairuse and education purposes</p>
                     </div>
                     <div class="col l4 offset-l2 s12">
                         <h5 class="white-text">Bring Me To</h5>
                         <ul>
                             <li><a class="grey-text text-lighten-3" href="#top">Home</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#">About</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Who is Banksy?</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Art</a></li>
+                            <li><a class="grey-text text-lighten-3" href="#about">About</a></li>
+                            <li><a class="grey-text text-lighten-3" href="#art">Art</a></li>
+                            <li><a class="grey-text text-lighten-3" href="#poll">Poll</a></li>
                             <li><a class="grey-text text-lighten-3" href="https://en.wikipedia.org/wiki/Banksy">More Info</a></li>
                             <li><a class="grey-text text-lighten-3" href="https://www.flickr.com/search/?text=banksy">More Banksy Pictures</a></li>
                         </ul>
@@ -243,7 +247,7 @@
                 </div>
             </div>
             <div class="footer-copyright black">
-                <div class="container"> © 2017 Copyright <a class="grey-text text-lighten-4 right" href="#top">Go To Top</a> </div>
+                <div class="container"> © 2017 Copyright Dillon Fosa / <img src="images/cc.logo.large.png"  width="50" alt="creative commons">  <a class="grey-text text-lighten-4 right" href="#top">Go To Top</a> </div>
             </div>
         </footer>
         <div class="preloader-background">
